[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/menu/reset.png" type="Texture" id=1]
[ext_resource path="res://assets/menu/start.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/pause.png" type="Texture" id=3]
[ext_resource path="res://scripts/game_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/menu/help_disabled.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/help.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/overlay.png" type="Texture" id=8]
[ext_resource path="res://assets/menu/move_icon.svg" type="Texture" id=9]

[node name="GameMenu" type="Control"]
margin_left = 32.0
margin_top = 30.0
margin_right = 180.0
margin_bottom = 70.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -4.0
margin_right = 141.0
margin_bottom = 47.0
texture = ExtResource( 8 )

[node name="VBoxContainer" type="MarginContainer" parent="."]
pause_mode = 2
anchor_left = 0.012
anchor_right = 0.024
margin_left = 8.26
margin_top = 5.0
margin_right = 134.26
margin_bottom = 35.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 127.0
margin_bottom = 30.0

[node name="BtnStart" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 27.0
margin_bottom = 30.0
texture_normal = ExtResource( 2 )

[node name="BtnPause" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 31.0
margin_right = 58.0
margin_bottom = 30.0
texture_normal = ExtResource( 3 )

[node name="BtnReset" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 96.0
margin_bottom = 30.0
texture_normal = ExtResource( 1 )

[node name="BtnSoluce" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 126.0
margin_bottom = 30.0
disabled = true
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 5 )

[node name="BtnMove" type="TextureButton" parent="."]
margin_left = 125.0
margin_top = 23.0
margin_right = 159.0
margin_bottom = 57.0
texture_normal = ExtResource( 9 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtnPause" to="." method="_on_BtnPause_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtnReset" to="." method="_on_BtnReset_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtnSoluce" to="." method="_on_BtnSoluce_pressed"]
[connection signal="gui_input" from="BtnMove" to="." method="_on_TextureButton_gui_input"]
